--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apexcharts": "^3.48.0",
     "axios": "^1.6.2",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
-    "lodash": "^4.17.21",
     "mssql": "^10.0.1",
     "next": "14.0.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
   },
