--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "@rocketseat/eslint-config/react",
+  "rules": {
+    "simple-import-sort/imports": "error"
+  }
 }
