--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
     "apexcharts": "^3.48.0",
     "axios": "^1.6.2",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.3.1",
     "mssql": "^10.0.1",
     "next": "14.0.3",
     "react": "^18",
@@ -21,12 +21,14 @@
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/mssql": "^9.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "sass": "^1.69.5",
     "typescript": "^5"
   }
