--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": "@rocketseat/eslint-config/react",
+  "plugins": ["simple-import-sort"],
   "rules": {
     "simple-import-sort/imports": "error"
   }
