--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "apexcharts": "^3.48.0",
     "axios": "^1.6.2",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "mssql": "^10.0.1",
     "next": "14.0.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
