--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.32.0",
     "apexcharts": "^3.48.0",
     "axios": "^1.6.2",
     "date-fns": "^3.6.0",
@@ -20,6 +21,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "sonner": "^1.4.41",
     "zod": "^3.22.5"
   },
   "devDependencies": {
